feat: 소셜 로그인 Step0~1 — OAuth2 의존성·설정·에러코드 추가 및 Security 체인 연결
- build.gradle: spring-boot-starter-oauth2-client 의존성 추가 (Step 0a)
- application.yml: Kakao OAuth2 registration/provider 설정, CORS·프런트 리다이렉트 URI 환경변수 바인딩 추가 (Step 0b)
- SecurityConfig: CORS allowedOrigins 하드코딩 제거 → APP_CORS_ALLOWED_ORIGINS 환경변수 기반 동적 구성,
  oauth2Login() 체인 연결, /oauth2/** /login/oauth2/** 경로 허용 (Step 0b, 1)
- ErrorCode: AUTH_OAUTH2_PROVIDER_ERROR·MISSING_EMAIL·EMAIL_CONFLICT 에러코드 추가 (Step 0c)
- JwtAuthenticationFilter: shouldNotFilter() 추가 — /oauth2/**, /login/oauth2/**, /error 명시 제외 (Step 1)
- CookieAuthorizationRequestRepository: STATELESS 환경에서 OAuth2 state를 HttpOnly/SameSite=Lax 쿠키로 저장 (Step 1)